--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+@import "styles/fonts.scss";
+
+:root {
+  --primary: #e8c4c2;
+  --primary-shadow: #de9e9b;
+  --text-dark: #424242;
+  --text-primary: #4f4f4f;
+  --error: #9e2d28;
+}
+
+html,
+body,
+app-root {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", -apple-system, sans-serif;
+  color: var(--text-dark);
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.with-hover {
+  &:hover {
+    box-shadow: 0px 0px 10px 2px var(--primary-shadow);
+    transform: scale(1.02);
+  }
+}
