--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <main>
-  <video autoplay loop muted [playbackRate]="0.6" class="background">
+  <video
+    autoplay
+    loop
+    muted
+    [playbackRate]="0.6"
+    class="background"
+    poster="assets/background.webp"
+  >
     <source src="assets/background.mp4" type="video/mp4" />
   </video>
   <div class="content">
